# AbyssFramework

./: CMakeLists.txt  main.cpp
Source/Private/: Log.cpp
Source/Public/AbyssFramework/: Log.h  Macros.h  Types.h
Source/Public/AbyssFramework/containers/: BiMap.hpp
